fixed gap between projects

--- a/style.css
+++ b/style.css
@@ -76,10 +76,10 @@ body{
 }
 .projects{
     display: flex;
-    gap: 10px;
+    gap: 20px;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 930px;
+    max-width: 950px;
 }
 
 .project{
